fix/added DTO validation to store list creation, added new routes on swagger, fixed error handling while reading CSV files
